fix: audit logs report query fixed to return proper token count and proper timestamps, annotation for ignoring unnecessary method invocations, simplification on pipeline gson logic, keep input output exposed for all IEngines